# ray_rst

./: .gitignore  Cargo.toml  README.md  configuration.toml  configuration.yaml
scripts/: run_release.nims
src/: configuration.rs  image.rs  lib.rs  main.rs
src/core/: camera.rs  colour.rs  hittable.rs  img.rs  mod.rs  ray.rs  sphere.rs  vec3.rs
src/materials/: dielectric.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/setup/: camera.rs  mod.rs
tests/: camera_test.rs  img_test.rs  material_test.rs  mod.rs  ray_test.rs  vec3_test.rs
