[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ray_tracer"

[dependencies]
config = "0.13.3"
palette = "0.7.3"
rand = "0.8.5"
serde = "1.0.164"
